--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
@@ -251,7 +251,7 @@
                                     </div>
                                     <div class="text-right">
                                         <div class="border-b border-gray-400 px-2 mb-0">
-                                            <span class="signature-font text-xl text-gray-800">Dr. A. Cognitus</span>
+                                            <span class="signature-font text-xl text-gray-800">LatinChain Platform</span>
                                         </div>
                                         <p id="cert-role-label" class="text-[10px] text-gray-400 uppercase">Chief Evaluator</p>
                                     </div>
