--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -620,6 +620,8 @@
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Latin Crush</strong></div>
                                                 <div style="display:inline;"> | </div>
+                                                <div translate="no" style="display:inline;"><strong>Soccer Penalty</strong></div>
+                                                <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>WebTorrent</strong></div>
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Music Player</strong></div>
@@ -645,6 +647,8 @@
                                                 <div translate="no" style="display:inline;"><strong>Odoo Development</strong></div>
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Learn: Spanish, English, Korean, Chinese Mandarin, Japanese, Vietnamese</strong></div>
+                                                <div style="display:inline;"> | </div>
+                                                <div translate="no" style="display:inline;"><strong>IQ Tester</strong></div>
                                                 <div style="display:inline;"> | </div>
                                                 <div translate="no" style="display:inline;"><strong>Can watch Worldwide Sport Results</strong></div>
                                                 <div style="display:inline;"> | </div>
@@ -691,6 +695,8 @@
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Latin Crush</strong></div>
                                             <div style="display:inline;"> | </div>
+                                            <div translate="no" style="display:inline;"><strong>Soccer Penalty</strong></div>
+                                            <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>WebTorrent</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Music Player</strong></div>
@@ -716,6 +722,8 @@
                                             <div translate="no" style="display:inline;"><strong>Odoo Development</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Learn: Spanish, English, Korean, Chinese Mandarin, Japanese, Vietnamese</strong></div>
+                                            <div style="display:inline;"> | </div>
+                                            <div translate="no" style="display:inline;"><strong>IQ Tester</strong></div>
                                             <div style="display:inline;"> | </div>
                                             <div translate="no" style="display:inline;"><strong>Can watch Worldwide Sport Results</strong></div>
                                             <div style="display:inline;"> | </div>
