--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
@@ -173,6 +173,9 @@
                             <button id="last-result-btn" onclick="viewLastCertificate()" class="hidden w-full bg-white border-2 border-gray-200 text-gray-600 hover:bg-gray-50 hover:text-gray-800 font-semibold py-3 px-6 rounded-lg transition">
                                 View Last Certificate
                             </button>
+                            <button id="last-result-btn" onclick="viewHigherScoreCertificate()" class="hidden w-full bg-white border-2 border-gray-200 text-gray-600 hover:bg-gray-50 hover:text-gray-800 font-semibold py-3 px-6 rounded-lg transition">
+                                View Higher Scored Certificate
+                            </button>
                         </div>
 
                         <!-- SCREEN 2: QUESTIONS -->
@@ -270,7 +273,7 @@
 
                     </div>
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/apps/iq_test_functions.js?v=1.110"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/apps/iq_test_functions.js?v=1.111"></script>
 
                 </body>
 
