--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
@@ -170,7 +170,7 @@
                             </button>
                             
                             <!-- Button to view last result (hidden by default) -->
-                            <button id="last-result-btn" onclick="viewLastCertificate()" class="hidden w-full bg-white border-2 border-gray-200 text-gray-600 hover:bg-gray-50 hover:text-gray-800 font-semibold py-3 px-6 rounded-lg transition">
+                            <button id="last-result-btn" onclick="viewLastCertificate()" class="hidden w-full bg-white border-2 border-gray-200 text-gray-600 hover:bg-gray-50 hover:text-gray-800 font-semibold py-3 px-6 rounded-lg transition mb-3">
                                 View Last Certificate
                             </button>
                             <button id="high-result-btn" onclick="viewHigherScoreCertificate()" class="hidden w-full bg-white border-2 border-gray-200 text-gray-600 hover:bg-gray-50 hover:text-gray-800 font-semibold py-3 px-6 rounded-lg transition">
@@ -273,7 +273,7 @@
 
                     </div>
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/apps/iq_test_functions.js?v=1.148"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/apps/iq_test_functions.js?v=1.149"></script>
 
                 </body>
 
