--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
@@ -241,7 +241,7 @@
                                 <div>
                                      <div class="bg-gray-50 border border-gray-200 inline-block px-6 py-1 rounded-lg">
                                         <span id="cert-score-label" class="block text-[10px] text-gray-500 uppercase">IQ Score</span>
-                                        <span id="iq-score" style="font-size: 80% !important" class="font-black text-blue-900 leading-tight">100</span>
+                                        <span id="iq-score" class="text-3xl font-black text-blue-900 leading-tight">100</span>
                                         <span id="iq-category" class="block text-[10px] font-semibold text-blue-600 leading-none">Average</span>
                                     </div>
                                 </div>
@@ -250,7 +250,7 @@
                                 <div class="flex justify-between items-end px-2 mb-1">
                                     <div class="text-left">
                                         <p id="cert-date-label" class="text-[10px] text-gray-400 uppercase">Date</p>
-                                        <p id="cert-date" class="text-xs font-semibold text-gray-700">01/01/2024</p>
+                                        <p id="cert-date" syle="font-size: 80% !important" class="font-semibold text-gray-700">01/01/2024</p>
                                     </div>
                                     <div class="text-right">
                                         <div class="border-b border-gray-400 px-2 mb-0">
