--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
@@ -250,7 +250,7 @@
                                 <div class="flex justify-between items-end px-2 mb-1">
                                     <div class="text-left">
                                         <p id="cert-date-label" class="text-[10px] text-gray-400 uppercase">Date</p>
-                                        <p id="cert-date" syle="font-size: 80% !important" class="font-semibold text-gray-700">01/01/2024</p>
+                                        <p id="cert-date" syle="font-size: 80% !important" class="text-xs font-semibold text-gray-700">01/01/2024</p>
                                     </div>
                                     <div class="text-right">
                                         <div class="border-b border-gray-400 px-2 mb-0">
