--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_iq_test.xml
@@ -250,11 +250,11 @@
                                 <div class="flex justify-between items-end px-2 mb-1">
                                     <div class="text-left">
                                         <p id="cert-date-label" class="text-[10px] text-gray-400 uppercase">Date</p>
-                                        <p id="cert-date" syle="font-size: 50% !important" class="text-xs font-semibold text-gray-700">01/01/2024</p>
+                                        <p id="cert-date" class="text-xs font-semibold text-gray-700">01/01/2024</p>
                                     </div>
                                     <div class="text-right">
                                         <div class="border-b border-gray-400 px-2 mb-0">
-                                            <span class="signature-font text-xl text-gray-800">LatinChain Platform</span>
+                                            <span class="signature-font text-xm text-gray-800">LatinChain Platform</span>
                                         </div>
                                         <p id="cert-role-label" class="text-[10px] text-gray-400 uppercase">Chief Evaluator</p>
                                     </div>
