--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -585,7 +585,7 @@
                                 
                                 <h3><div translate="no" style="display:inline;">Current time:</div> <div style="display:inline;" translate="no" t-esc="time.strftime('%Y-%m-%d %H:%M:%S')"/> <div translate="no" style="display:inline;">UTC.</div></h3>
                                 <h3><div translate="no" style="display:inline;">This info refers to:</div> <div t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" style="display:inline; font-size: 70%; word-break: break-word;" translate="no">Mainnet (https://latinchain.pinet.com)</div><div t-if="mainnet in ['Testnet ON', 'Testnet OFF']" style="display:inline; font-size: 70%; word-break: break-word;" translate="no">Testnet (https://latinchaintest9869.pinet.com)</div></h3>
-                                <h3 translate="no">The following certifies that the Pioneer <strong><div style="display:inline;"> <div style="display:inline;" t-esc="username" translate="no"></div> <div t-if="iq_result" style="display:inline;" translate="no"><div style="display:inline;" translate="no">IQ:</div> <div style="display:inline;" t-esc="iq_result" translate="no"></div></div> </div></strong> is training and has availability to train skills at LatinChain Platform, as:</h3>
+                                <h3 translate="no">The following certifies that the Pioneer <strong><div style="display:inline;"> <div style="display:inline;" t-esc="username" translate="no"></div> </div></strong> is training and has availability to train skills at LatinChain Platform, as:</h3>
                                 <br/>
                                 
                                 <!-- Certification Webpage Section -->
