--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2843,7 +2843,7 @@
                     
                     <!--<a id="myActionsABtn" href="#" style="color: white" translate="no">-->
                     <div class="btn-group dropend position-fixed bottom-0 end-0 m-4">
-                        <button type="button" id="myActionsBtn" style="color: black !important" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" id="myActionsBtn" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-rocket"></i>
                         </button>
                         <ul class="dropdown-menu mb-2" style="background-color: #021526 !important;">
