--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2847,14 +2847,14 @@
                             <i class="fa-solid fa-rocket"></i>
                         </button>
                         <ul class="dropdown-menu mb-2" style="background-color: #021526 !important;">
-                            <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/chess"><div style="display:inline;"><i class="fa-solid fa-chess-knight"></i></div> <div style="display:inline;">Play Chess</div></a></li>
-                            <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/sudoku"><div style="display:inline;"><i class="fa-solid fa-puzzle-piece"></i></div> <div style="display:inline;">Play Sudoku</div></a></li>
-                            <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/snake"><div style="display:inline;"><i class="fa-solid fa-staff-snake"></i></div> <div style="display:inline;">Play Snake</div></a></li>
-                            <li class="item-latin-action"><a class="dropdown-item getverified" style="color: white !important;" href="/pinetwork?payoneclick=true"><div style="display:inline;"><i class="fa-solid fa-handshake-simple"></i></div> <div style="display:inline;">Donate in one touch</div></a></li>
+                            <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/chess"><div style="display:inline;"><i class="fa-solid fa-chess-knight"></i></div> <div style="display:inline;">Chess</div></a></li>
+                            <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/sudoku"><div style="display:inline;"><i class="fa-solid fa-puzzle-piece"></i></div> <div style="display:inline;">Sudoku</div></a></li>
+                            <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/snake"><div style="display:inline;"><i class="fa-solid fa-staff-snake"></i></div> <div style="display:inline;">Snake</div></a></li>
+                            <li class="item-latin-action"><a class="dropdown-item getverified" style="color: white !important;" href="/pinetwork?payoneclick=true"><div style="display:inline;"><i class="fa-solid fa-handshake-simple"></i></div> <div style="display:inline;">Donate</div></a></li>
                             <li><hr class="dropdown-divider" style="color: white !important;"/></li>
-                            <li class="item-latin-action"><a class="dropdown-item go-to-home-tab" style="color: white !important;" href="javascript:void(0)"><div style="display:inline;"><i class="fa-solid fa-rocket"></i></div> <div style="display:inline;">Use Cool Apps</div></a></li>
-                            <li class="item-latin-action"><a class="dropdown-item go-to-home-tab" style="color: white !important;" href="javascript:void(0)"><div style="display:inline;"><i class="fa-solid fa-rocket"></i></div> <div style="display:inline;">Play Other Games</div></a></li>
-                            <li class="item-latin-action"><a class="dropdown-item go-to-home-tab" style="color: white !important;" href="javascript:void(0)"><div style="display:inline;"><i class="fa-solid fa-rocket"></i></div> <div style="display:inline;">Use Utilities</div></a></li>
+                            <li class="item-latin-action"><a class="dropdown-item go-to-home-tab" style="color: white !important;" href="javascript:void(0)"><div style="display:inline;"><i class="fa-solid fa-rocket"></i></div> <div style="display:inline;">Cool Apps</div></a></li>
+                            <li class="item-latin-action"><a class="dropdown-item go-to-home-tab" style="color: white !important;" href="javascript:void(0)"><div style="display:inline;"><i class="fa-solid fa-rocket"></i></div> <div style="display:inline;">Other Games</div></a></li>
+                            <li class="item-latin-action"><a class="dropdown-item go-to-home-tab" style="color: white !important;" href="javascript:void(0)"><div style="display:inline;"><i class="fa-solid fa-rocket"></i></div> <div style="display:inline;">Utilities</div></a></li>
                         </ul>
                     </div>
                     <!--</a>-->
