--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2842,7 +2842,7 @@
                     <a id="myABtn" href="#top" style="color: white" translate="no"><button id="myBtn"><i class="fa-solid fa-arrow-up"></i></button></a>
                     
                     <!--<a id="myActionsABtn" href="#" style="color: white" translate="no">-->
-                    <div class="btn-group dropup position-fixed bottom-0 end-0 m-4" translate="no">
+                    <div class="btn-group dropend position-fixed bottom-0 end-0 m-4" translate="no">
                         <button type="button" id="myActionsBtn" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-rocket"></i>
                         </button>
