--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2846,7 +2846,7 @@
                         <button type="button" id="myActionsBtn" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-rocket"></i>
                         </button>
-                        <ul class="dropdown-menu mb-2" style="background-color: #021526 !important;">
+                        <ul class="dropdown-menu mb-2 item-latin-menu" style="background-color: #021526 !important;">
                             <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/chess"><div style="display:inline;"><i class="fa-solid fa-chess-knight"></i></div> <div style="display:inline;">Chess</div></a></li>
                             <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/sudoku"><div style="display:inline;"><i class="fa-solid fa-puzzle-piece"></i></div> <div style="display:inline;">Sudoku</div></a></li>
                             <li class="item-latin-action"><a class="dropdown-item" style="color: white !important;" href="/snake"><div style="display:inline;"><i class="fa-solid fa-staff-snake"></i></div> <div style="display:inline;">Snake</div></a></li>
@@ -2933,6 +2933,10 @@
                             
                             .item-latin-action * {
                                 background-color: #021526;
+                            }
+                            
+                            .item-latin-menu {
+                                z-index:10000;
                             }
                             
                     </style>
